@@ -8,6 +8,7 @@ module HSE.All(
     ) where
 
 import Util
+import Data.List
 import HSE.Util
 import HSE.Evaluate
 import HSE.Eq
@@ -46,21 +47,11 @@ parseFile flags file = do
     return $ parseString flags file src
 
 
-extension =
-    [OverlappingInstances, UndecidableInstances, IncoherentInstances, RecursiveDo
-    ,ParallelListComp, MultiParamTypeClasses, NoMonomorphismRestriction, FunctionalDependencies
-    ,Rank2Types, RankNTypes, PolymorphicComponents, ExistentialQuantification, ScopedTypeVariables
-    ,ImplicitParams,FlexibleContexts,FlexibleInstances,EmptyDataDecls
-    -- NOT: CPP
-    ,KindSignatures,BangPatterns,TypeSynonymInstances,TemplateHaskell
-    ,ForeignFunctionInterface,Generics,NoImplicitPrelude,NamedFieldPuns,PatternGuards
-    ,GeneralizedNewtypeDeriving,ExtensibleRecords,RestrictedTypeSynonyms,HereDocuments
-    ,MagicHash,TypeFamilies,StandaloneDeriving,UnicodeSyntax,PatternSignatures,UnliftedFFITypes
-    ,LiberalTypeSynonyms,TypeOperators,RecordWildCards,RecordPuns,DisambiguateRecordFields
-    ,OverloadedStrings,GADTs,MonoPatBinds,RelaxedPolyRec,ExtendedDefaultRules,UnboxedTuples
-    ,DeriveDataTypeable,ConstrainedClassMethods,PackageImports,ImpredicativeTypes
-    ,NewQualifiedOperators,PostfixOperators,QuasiQuotes,ViewPatterns
-    -- NOT: Arrows - steals proc
-    -- NOT: TransformListComp - steals the group keyword
-    -- NOT: XmlSyntax, RegularPatterns - steals a-b
+extension = knownExtensions \\ badExtensions
+
+badExtensions =
+    [CPP
+    ,Arrows -- steals proc
+    ,TransformListComp -- steals the group keyword
+    ,XmlSyntax, RegularPatterns -- steals a-b
     ]
